@@ -2,6 +2,7 @@ systemd-genie (1.45) buster bullseye bookworm sid focal bionic; urgency=medium
 
         * Moved executables from /usr/libexec/genie to /usr/lib/genie.
         * Improved Arch PKGBUILD file.
+        * Support for AppArmor namespaces.
 
  -- Alistair Young <avatar@arkane-systems.net>  Sat, 07 Aug 2021 16:40:00 -0500
 
